--- a/app/src/main/res/layout/fragment_search_fragments_wrapper.xml
+++ b/app/src/main/res/layout/fragment_search_fragments_wrapper.xml
@@ -7,23 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".Fragments.Wrappers.SearchFragmentsWrapper">
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.12" />
-
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragmentContainerView5"
-        android:name="no.stockwallet.Fragments.SearchFragments.SeachBarFragment"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline4"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView6"
         android:name="no.stockwallet.Fragments.SearchFragments.SearchHistoryFragment"
@@ -32,5 +15,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView5" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout="@layout/fragment_search_history" />
 </androidx.constraintlayout.widget.ConstraintLayout>
