--- a/app/src/main/res/layout/fragment_search_history.xml
+++ b/app/src/main/res/layout/fragment_search_history.xml
@@ -7,9 +7,21 @@
     android:layout_height="match_parent"
     tools:context=".Fragments.SearchFragments.SearchHistoryFragment">
 
+    <SearchView
+        android:id="@+id/searchBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/searchRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#6C3232" />
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#6C3232"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchBar" />
 </androidx.constraintlayout.widget.ConstraintLayout>
