--- a/app/src/main/res/layout/fragment_buy_sell.xml
+++ b/app/src/main/res/layout/fragment_buy_sell.xml
@@ -105,13 +105,12 @@
                     android:id="@+id/RegisterBuySellButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="32dp"
                     android:text="@string/buy_sell_button"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.497"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.86" />
+                    app:layout_constraintTop_toBottomOf="@+id/InputStockFee" />
 
                 <TextView
                     android:id="@+id/StockPriceLabel"
