--- a/app/src/main/res/layout/stock_card_item.xml
+++ b/app/src/main/res/layout/stock_card_item.xml
@@ -30,44 +30,44 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView9"
+            android:id="@+id/avkastning"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/percent_earning"
             android:textSize="16sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/textView10"
-            app:layout_constraintEnd_toStartOf="@+id/textView11"
+            app:layout_constraintBottom_toBottomOf="@+id/verdi"
+            app:layout_constraintEnd_toStartOf="@+id/avkastningNok"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/textView10"
-            app:layout_constraintTop_toTopOf="@+id/textView10" />
+            app:layout_constraintStart_toEndOf="@+id/verdi"
+            app:layout_constraintTop_toTopOf="@+id/verdi" />
 
         <TextView
-            android:id="@+id/textView10"
+            android:id="@+id/verdi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="@string/stock_value"
             android:textSize="16sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/textView9"
+            app:layout_constraintEnd_toStartOf="@+id/avkastning"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/StockNamePH" />
 
         <TextView
-            android:id="@+id/textView11"
+            android:id="@+id/avkastningNok"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:text="@string/stock_earning"
             android:textSize="16sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/textView9"
+            app:layout_constraintBottom_toBottomOf="@+id/avkastning"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/textView9"
-            app:layout_constraintTop_toTopOf="@+id/textView9" />
+            app:layout_constraintStart_toEndOf="@+id/avkastning"
+            app:layout_constraintTop_toTopOf="@+id/avkastning" />
 
         <TextView
             android:id="@+id/StockValuePH"
@@ -75,9 +75,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="Value PH"
-            app:layout_constraintEnd_toEndOf="@+id/textView10"
-            app:layout_constraintStart_toStartOf="@+id/textView10"
-            app:layout_constraintTop_toBottomOf="@+id/textView10" />
+            app:layout_constraintEnd_toEndOf="@+id/verdi"
+            app:layout_constraintStart_toStartOf="@+id/verdi"
+            app:layout_constraintTop_toBottomOf="@+id/verdi" />
 
         <TextView
             android:id="@+id/StockEarningPCPH"
@@ -85,9 +85,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="Percent earning PH"
-            app:layout_constraintEnd_toEndOf="@+id/textView9"
-            app:layout_constraintStart_toStartOf="@+id/textView9"
-            app:layout_constraintTop_toBottomOf="@+id/textView9" />
+            app:layout_constraintEnd_toEndOf="@+id/avkastning"
+            app:layout_constraintStart_toStartOf="@+id/avkastning"
+            app:layout_constraintTop_toBottomOf="@+id/avkastning" />
 
         <TextView
             android:id="@+id/StockEarningPH"
@@ -95,16 +95,16 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="Earning PH"
-            app:layout_constraintEnd_toEndOf="@+id/textView11"
-            app:layout_constraintStart_toStartOf="@+id/textView11"
-            app:layout_constraintTop_toBottomOf="@+id/textView11" />
+            app:layout_constraintEnd_toEndOf="@+id/avkastningNok"
+            app:layout_constraintStart_toStartOf="@+id/avkastningNok"
+            app:layout_constraintTop_toBottomOf="@+id/avkastningNok" />
 
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/avkastningNok"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@android:drawable/ic_menu_more" />
@@ -113,27 +113,82 @@
             android:id="@+id/detailGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:constraint_referenced_ids="testView1,testView2" />
+            app:constraint_referenced_ids="Volum,StockVolumePH,StockAverageBuy,StockAveragePH,
+            DagensPris,StockCurrentPricePH,StockIntradayPH,intradaySkift" />
 
         <TextView
-            android:id="@+id/testView1"
+            android:id="@+id/Volum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
-            app:layout_constraintBottom_toTopOf="@+id/textView9"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="16dp"
+            android:text="@string/stock_volume"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/StockValuePH" />
 
         <TextView
-            android:id="@+id/testView2"
+            android:id="@+id/StockVolumePH"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
-            app:layout_constraintBottom_toBottomOf="@+id/textView9"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="32dp"
+            android:text="VolumePH"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/StockEarningPH" />
+
+        <TextView
+            android:id="@+id/StockAverageBuy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/stock_average_price"
+            app:layout_constraintStart_toStartOf="@+id/Volum"
+            app:layout_constraintTop_toBottomOf="@+id/Volum" />
+
+        <TextView
+            android:id="@+id/StockAveragePH"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Average Buy PH"
+            app:layout_constraintEnd_toEndOf="@+id/StockVolumePH"
+            app:layout_constraintTop_toBottomOf="@+id/StockVolumePH" />
+
+        <TextView
+            android:id="@+id/DagensPris"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/stock_nowday_price"
+            app:layout_constraintStart_toStartOf="@+id/intradaySkift"
+            app:layout_constraintTop_toBottomOf="@+id/intradaySkift" />
+
+        <TextView
+            android:id="@+id/StockCurrentPricePH"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="CurrentPrice PH"
+            app:layout_constraintEnd_toEndOf="@+id/StockIntradayPH"
+            app:layout_constraintTop_toBottomOf="@+id/StockIntradayPH" />
+
+        <TextView
+            android:id="@+id/StockIntradayPH"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Intraday PH"
+            app:layout_constraintEnd_toEndOf="@+id/StockAveragePH"
+            app:layout_constraintTop_toBottomOf="@+id/StockAveragePH" />
+
+        <TextView
+            android:id="@+id/intradaySkift"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/stock_intraday"
+            app:layout_constraintStart_toStartOf="@+id/StockAverageBuy"
+            app:layout_constraintTop_toBottomOf="@+id/StockAverageBuy" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
