--- a/app/src/main/res/layout/stock_card_item.xml
+++ b/app/src/main/res/layout/stock_card_item.xml
@@ -30,44 +30,44 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/avkastning"
+            android:id="@+id/earning"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/percent_earning"
             android:textSize="16sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/verdi"
-            app:layout_constraintEnd_toStartOf="@+id/avkastningNok"
+            app:layout_constraintBottom_toBottomOf="@+id/value"
+            app:layout_constraintEnd_toStartOf="@+id/earningNOK"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/verdi"
-            app:layout_constraintTop_toTopOf="@+id/verdi" />
+            app:layout_constraintStart_toEndOf="@+id/value"
+            app:layout_constraintTop_toTopOf="@+id/value" />
 
         <TextView
-            android:id="@+id/verdi"
+            android:id="@+id/value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="@string/stock_value"
             android:textSize="16sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/avkastning"
+            app:layout_constraintEnd_toStartOf="@+id/earning"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/StockNamePH" />
 
         <TextView
-            android:id="@+id/avkastningNok"
+            android:id="@+id/earningNOK"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:text="@string/stock_earning"
             android:textSize="16sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/avkastning"
+            app:layout_constraintBottom_toBottomOf="@+id/earning"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/avkastning"
-            app:layout_constraintTop_toTopOf="@+id/avkastning" />
+            app:layout_constraintStart_toEndOf="@+id/earning"
+            app:layout_constraintTop_toTopOf="@+id/earning" />
 
         <TextView
             android:id="@+id/StockValuePH"
@@ -75,9 +75,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="Value PH"
-            app:layout_constraintEnd_toEndOf="@+id/verdi"
-            app:layout_constraintStart_toStartOf="@+id/verdi"
-            app:layout_constraintTop_toBottomOf="@+id/verdi" />
+            app:layout_constraintEnd_toEndOf="@+id/value"
+            app:layout_constraintStart_toStartOf="@+id/value"
+            app:layout_constraintTop_toBottomOf="@+id/value" />
 
         <TextView
             android:id="@+id/StockEarningPCPH"
@@ -85,9 +85,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="Percent earning PH"
-            app:layout_constraintEnd_toEndOf="@+id/avkastning"
-            app:layout_constraintStart_toStartOf="@+id/avkastning"
-            app:layout_constraintTop_toBottomOf="@+id/avkastning" />
+            app:layout_constraintEnd_toEndOf="@+id/earning"
+            app:layout_constraintStart_toStartOf="@+id/earning"
+            app:layout_constraintTop_toBottomOf="@+id/earning" />
 
         <TextView
             android:id="@+id/StockEarningPH"
@@ -95,16 +95,16 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="Earning PH"
-            app:layout_constraintEnd_toEndOf="@+id/avkastningNok"
-            app:layout_constraintStart_toStartOf="@+id/avkastningNok"
-            app:layout_constraintTop_toBottomOf="@+id/avkastningNok" />
+            app:layout_constraintEnd_toEndOf="@+id/earningNOK"
+            app:layout_constraintStart_toStartOf="@+id/earningNOK"
+            app:layout_constraintTop_toBottomOf="@+id/earningNOK" />
 
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
-            app:layout_constraintBottom_toTopOf="@+id/avkastningNok"
+            app:layout_constraintBottom_toTopOf="@+id/earningNOK"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@android:drawable/ic_menu_more" />
@@ -113,11 +113,11 @@
             android:id="@+id/detailGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:constraint_referenced_ids="Volum,StockVolumePH,StockAverageBuy,StockAveragePH,
-            DagensPris,StockCurrentPricePH,StockIntradayPH,intradaySkift" />
+            app:constraint_referenced_ids="Volume,StockVolumePH,StockAverageBuy,StockAveragePH,
+            TodaysPrice,StockCurrentPricePH,StockIntradayPH,IntradayShift" />
 
         <TextView
-            android:id="@+id/Volum"
+            android:id="@+id/Volume"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
@@ -142,8 +142,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="@string/stock_average_price"
-            app:layout_constraintStart_toStartOf="@+id/Volum"
-            app:layout_constraintTop_toBottomOf="@+id/Volum" />
+            app:layout_constraintStart_toStartOf="@+id/Volume"
+            app:layout_constraintTop_toBottomOf="@+id/Volume" />
 
         <TextView
             android:id="@+id/StockAveragePH"
@@ -155,13 +155,13 @@
             app:layout_constraintTop_toBottomOf="@+id/StockVolumePH" />
 
         <TextView
-            android:id="@+id/DagensPris"
+            android:id="@+id/TodaysPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="@string/stock_nowday_price"
-            app:layout_constraintStart_toStartOf="@+id/intradaySkift"
-            app:layout_constraintTop_toBottomOf="@+id/intradaySkift" />
+            app:layout_constraintStart_toStartOf="@+id/IntradayShift"
+            app:layout_constraintTop_toBottomOf="@+id/IntradayShift" />
 
         <TextView
             android:id="@+id/StockCurrentPricePH"
@@ -182,7 +182,7 @@
             app:layout_constraintTop_toBottomOf="@+id/StockAveragePH" />
 
         <TextView
-            android:id="@+id/intradaySkift"
+            android:id="@+id/IntradayShift"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
