--- a/app/src/main/res/layout/stock_card_item.xml
+++ b/app/src/main/res/layout/stock_card_item.xml
@@ -114,7 +114,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:constraint_referenced_ids="Volume,StockVolumePH,StockAverageBuy,StockAveragePH,
-            TodaysPrice,StockCurrentPricePH,StockIntradayPH,IntradayShift,SeeStockButton" />
+            TodaysPrice,StockCurrentPricePH,StockIntradayPH,IntradayShift,SeeStockButton, ticker, StockTickerPH" />
 
         <TextView
             android:id="@+id/Volume"
@@ -125,7 +125,7 @@
             android:text="@string/stock_volume"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/StockValuePH" />
+            app:layout_constraintTop_toBottomOf="@+id/ticker" />
 
         <TextView
             android:id="@+id/StockVolumePH"
@@ -135,7 +135,7 @@
             android:layout_marginEnd="32dp"
             android:text="VolumePH"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/StockEarningPH" />
+            app:layout_constraintTop_toBottomOf="@+id/StockTickerPH" />
 
         <TextView
             android:id="@+id/StockAverageBuy"
@@ -203,6 +203,27 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/TodaysPrice" />
+
+        <TextView
+            android:id="@+id/ticker"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="16dp"
+            android:text="@string/stock_ticker"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/StockValuePH" />
+
+        <TextView
+            android:id="@+id/StockTickerPH"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="32dp"
+            android:text="StockTickerPH"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/StockEarningPH" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
