--- a/app/src/main/res/layout/fragment_detail_stock_fragments_wrapper.xml
+++ b/app/src/main/res/layout/fragment_detail_stock_fragments_wrapper.xml
@@ -22,13 +22,35 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/textView6"
-                android:layout_width="wrap_content"
-                android:layout_height="500dp"
-                android:text="TextView"
-                tools:layout_editor_absoluteX="152dp"
-                tools:layout_editor_absoluteY="125dp" />
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/SingleStockValueFragmentContainer"
+                android:name="no.stockwallet.Fragments.StockViewFragments.StockValueFragment"
+                android:layout_width="0dp"
+                android:layout_height="200dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:layout="@layout/fragment_stock_value" />
+
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/SingeStockGraphFragmentContainer"
+                android:name="no.stockwallet.Fragments.DetailedStockFragments.GraphFragment"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/SingleStockValueFragmentContainer"
+                tools:layout="@layout/fragment_graph2" />
+
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/SingleStockAdditionalDataFragmentContainer"
+                android:name="no.stockwallet.Fragments.DetailedStockFragments.AdditionalDataFragment"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/SingeStockGraphFragmentContainer"
+                tools:layout="@layout/fragment_additional_data" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
