adding temporary placeholder for FAB

--- a/app/src/main/res/layout/fragment_detail_stock_fragments_wrapper.xml
+++ b/app/src/main/res/layout/fragment_detail_stock_fragments_wrapper.xml
@@ -38,6 +38,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/SingleStockValueFragmentContainer"
                 tools:layout="@layout/fragment_graph2" />
@@ -51,6 +52,17 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/SingeStockGraphFragmentContainer"
                 tools:layout="@layout/fragment_additional_data" />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/floatingActionButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:clickable="true"
+                android:src="@drawable/fab_icon"
+                app:layout_constraintBottom_toBottomOf="@+id/SingeStockGraphFragmentContainer"
+                app:layout_constraintEnd_toEndOf="parent"
+                tools:ignore="SpeakableTextPresentCheck" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
