--- a/app/src/main/res/layout/fragment_detail_stock_fragments_wrapper.xml
+++ b/app/src/main/res/layout/fragment_detail_stock_fragments_wrapper.xml
@@ -60,6 +60,7 @@
                 android:layout_marginEnd="16dp"
                 android:clickable="true"
                 android:src="@drawable/fab_icon"
+                app:backgroundTint="@color/purple_500"
                 app:layout_constraintBottom_toBottomOf="@+id/SingeStockGraphFragmentContainer"
                 app:layout_constraintEnd_toEndOf="parent"
                 tools:ignore="SpeakableTextPresentCheck" />
