--- a/app/src/main/res/layout/fragment_value.xml
+++ b/app/src/main/res/layout/fragment_value.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/StockValueLayout"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/TotalValueLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.StockViewFragments.StockValueFragment">
-
+    tools:context=".Fragments.DetailedStockFragments.ValueFragment">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline4"
@@ -26,7 +25,7 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="100dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/stock_last_24"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -38,7 +37,7 @@
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="100dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/stock_last_tick"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -50,7 +49,7 @@
         android:id="@+id/StockLast24PH"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="16dp"
         android:text="Last24PH"
         app:layout_constraintEnd_toStartOf="@+id/guideline4"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,7 +59,7 @@
         android:id="@+id/StockLastTickPH"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="16dp"
         android:text="LastPH"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
