--- a/app/src/main/res/layout/fragment_additional_data.xml
+++ b/app/src/main/res/layout/fragment_additional_data.xml
@@ -15,48 +15,48 @@
         app:layout_constraintGuide_percent="0.5" />
 
     <TextView
-        android:id="@+id/SingleStockVolume"
+        android:id="@+id/SingleStockTicker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/stock_volume"
+        android:text="@string/stock_ticker"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/SingleStockAVGPrice"
-        app:layout_constraintStart_toStartOf="@+id/SingleStockAVGPrice"
+        app:layout_constraintBottom_toTopOf="@+id/SingleStockDailyChange"
+        app:layout_constraintStart_toStartOf="@+id/SingleStockDailyChange"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/SingleStockVolumePH"
+        android:id="@+id/SingleStockTickerPH"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="VolumePH"
+        android:text="TickerPH"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/SingleStockAVGPH"
-        app:layout_constraintEnd_toEndOf="@+id/SingleStockAVGPH"
-        app:layout_constraintStart_toStartOf="@+id/SingleStockAVGPH"
+        app:layout_constraintBottom_toTopOf="@+id/SingleStockChangePH"
+        app:layout_constraintEnd_toEndOf="@+id/SingleStockChangePH"
+        app:layout_constraintStart_toStartOf="@+id/SingleStockChangePH"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/SingleStockAVGPrice"
+        android:id="@+id/SingleStockDailyChange"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/stock_average_price"
+        android:text="@string/stock_intraday"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/SingleStockCostPrice"
         app:layout_constraintStart_toStartOf="@+id/SingleStockCostPrice"
-        app:layout_constraintTop_toBottomOf="@+id/SingleStockVolume" />
+        app:layout_constraintTop_toBottomOf="@+id/SingleStockTicker" />
 
     <TextView
-        android:id="@+id/SingleStockAVGPH"
+        android:id="@+id/SingleStockChangePH"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="AvgPH"
+        android:text="ChangePH"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/SingleStockCostPH"
         app:layout_constraintEnd_toEndOf="@+id/SingleStockCostPH"
         app:layout_constraintStart_toStartOf="@+id/SingleStockCostPH"
-        app:layout_constraintTop_toBottomOf="@+id/SingleStockVolumePH" />
+        app:layout_constraintTop_toBottomOf="@+id/SingleStockTickerPH" />
 
     <TextView
         android:id="@+id/SingleStockCostPrice"
@@ -65,9 +65,9 @@
         android:text="@string/stock_current_price"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/SingleStockLastTick"
-        app:layout_constraintStart_toStartOf="@+id/SingleStockLastTick"
-        app:layout_constraintTop_toBottomOf="@+id/SingleStockAVGPrice" />
+        app:layout_constraintBottom_toTopOf="@+id/SingleStockMarketValue"
+        app:layout_constraintStart_toStartOf="@+id/SingleStockMarketValue"
+        app:layout_constraintTop_toBottomOf="@+id/SingleStockDailyChange" />
 
     <TextView
         android:id="@+id/SingleStockCostPH"
@@ -75,54 +75,10 @@
         android:layout_height="wrap_content"
         android:text="CurrentpricePH"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/SingleStockLastTickPH"
-        app:layout_constraintEnd_toEndOf="@+id/SingleStockLastTickPH"
-        app:layout_constraintStart_toStartOf="@+id/SingleStockLastTickPH"
-        app:layout_constraintTop_toBottomOf="@+id/SingleStockAVGPH" />
-
-    <TextView
-        android:id="@+id/SingleStockLastTick"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/stock_last_tick"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/SingleStockCurrency"
-        app:layout_constraintStart_toStartOf="@+id/SingleStockCurrency"
-        app:layout_constraintTop_toBottomOf="@+id/SingleStockCostPrice" />
-
-    <TextView
-        android:id="@+id/SingleStockLastTickPH"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="LasttickPH"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/SingleStockCurrencyPH"
-        app:layout_constraintEnd_toEndOf="@+id/SingleStockCurrencyPH"
-        app:layout_constraintStart_toStartOf="@+id/SingleStockCurrencyPH"
-        app:layout_constraintTop_toBottomOf="@+id/SingleStockCostPH" />
-
-    <TextView
-        android:id="@+id/SingleStockCurrency"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/stock_currency"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/SingleStockMarketValue"
-        app:layout_constraintStart_toStartOf="@+id/SingleStockMarketValue"
-        app:layout_constraintTop_toBottomOf="@+id/SingleStockLastTick" />
-
-    <TextView
-        android:id="@+id/SingleStockCurrencyPH"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="CurrencyPH"
-        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/SingleStockMarketPH"
         app:layout_constraintEnd_toEndOf="@+id/SingleStockMarketPH"
         app:layout_constraintStart_toStartOf="@+id/SingleStockMarketPH"
-        app:layout_constraintTop_toBottomOf="@+id/SingleStockLastTickPH" />
+        app:layout_constraintTop_toBottomOf="@+id/SingleStockChangePH" />
 
     <TextView
         android:id="@+id/SingleStockMarketValue"
@@ -131,65 +87,109 @@
         android:text="@string/stock_market_value"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/SingleStockEarning"
-        app:layout_constraintStart_toStartOf="@+id/SingleStockEarning"
-        app:layout_constraintTop_toBottomOf="@+id/SingleStockCurrency" />
+        app:layout_constraintBottom_toTopOf="@+id/SingleStockBVS"
+        app:layout_constraintStart_toStartOf="@+id/SingleStockBVS"
+        app:layout_constraintTop_toBottomOf="@+id/SingleStockCostPrice" />
 
     <TextView
         android:id="@+id/SingleStockMarketPH"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="MarketvaluePH"
+        android:text="MarketValuePH"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/SingleStockEarningPH"
-        app:layout_constraintEnd_toEndOf="@+id/SingleStockEarningPH"
-        app:layout_constraintStart_toStartOf="@+id/SingleStockEarningPH"
-        app:layout_constraintTop_toBottomOf="@+id/SingleStockCurrencyPH" />
+        app:layout_constraintBottom_toTopOf="@+id/SingleStockBVSPH"
+        app:layout_constraintEnd_toEndOf="@+id/SingleStockBVSPH"
+        app:layout_constraintStart_toStartOf="@+id/SingleStockBVSPH"
+        app:layout_constraintTop_toBottomOf="@+id/SingleStockCostPH" />
 
     <TextView
-        android:id="@+id/SingleStockEarning"
+        android:id="@+id/SingleStockBVS"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/stock_single_earning"
+        android:text="@string/stock_bvs"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/SingleStockEarningTotal"
-        app:layout_constraintStart_toStartOf="@+id/SingleStockEarningTotal"
+        app:layout_constraintBottom_toTopOf="@+id/SingleStockPE"
+        app:layout_constraintStart_toStartOf="@+id/SingleStockPE"
         app:layout_constraintTop_toBottomOf="@+id/SingleStockMarketValue" />
 
     <TextView
-        android:id="@+id/SingleStockEarningPH"
+        android:id="@+id/SingleStockBVSPH"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="earningPH"
+        android:text="BVSPH"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/SingleStockEarningTotalPH"
-        app:layout_constraintEnd_toEndOf="@+id/SingleStockEarningTotalPH"
-        app:layout_constraintStart_toStartOf="@+id/SingleStockEarningTotalPH"
+        app:layout_constraintBottom_toTopOf="@+id/SingleStockPEPH"
+        app:layout_constraintEnd_toEndOf="@+id/SingleStockPEPH"
+        app:layout_constraintStart_toStartOf="@+id/SingleStockPEPH"
         app:layout_constraintTop_toBottomOf="@+id/SingleStockMarketPH" />
 
     <TextView
-        android:id="@+id/SingleStockEarningTotal"
+        android:id="@+id/SingleStockPE"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/stock_PE"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/SingleStockYearBottom"
+        app:layout_constraintStart_toStartOf="@+id/SingleStockYearBottom"
+        app:layout_constraintTop_toBottomOf="@+id/SingleStockBVS" />
+
+    <TextView
+        android:id="@+id/SingleStockPEPH"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="PEPH"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/SingleStockYearBottomPH"
+        app:layout_constraintEnd_toEndOf="@+id/SingleStockYearBottomPH"
+        app:layout_constraintStart_toStartOf="@+id/SingleStockYearBottomPH"
+        app:layout_constraintTop_toBottomOf="@+id/SingleStockBVSPH" />
+
+    <TextView
+        android:id="@+id/SingleStockYearBottom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/stock_low"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/SingleStockYearTop"
+        app:layout_constraintStart_toStartOf="@+id/SingleStockYearTop"
+        app:layout_constraintTop_toBottomOf="@+id/SingleStockPE" />
+
+    <TextView
+        android:id="@+id/SingleStockYearBottomPH"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="yearLowPH"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/SingleStockYearTopPH"
+        app:layout_constraintEnd_toEndOf="@+id/SingleStockYearTopPH"
+        app:layout_constraintStart_toStartOf="@+id/SingleStockYearTopPH"
+        app:layout_constraintTop_toBottomOf="@+id/SingleStockPEPH" />
+
+    <TextView
+        android:id="@+id/SingleStockYearTop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:text="@string/stock_single_earning_total"
+        android:text="@string/stock_high"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/SingleStockEarning" />
+        app:layout_constraintTop_toBottomOf="@+id/SingleStockYearBottom" />
 
     <TextView
-        android:id="@+id/SingleStockEarningTotalPH"
+        android:id="@+id/SingleStockYearTopPH"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        android:text="totalearnPH"
+        android:text="yearHighPH"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/button2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/SingleStockEarningPH" />
+        app:layout_constraintStart_toStartOf="@+id/guideline15"
+        app:layout_constraintTop_toBottomOf="@+id/SingleStockYearBottomPH" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline25"
